# services/account/src/main/java/ru/abramov/practicum/bank/service/account/dto/ChangeBalanceDto.java
@@ -1,0 +1,13 @@
+package ru.abramov.practicum.bank.service.account.dto;
+
+import lombok.Data;
+
+import java.math.BigDecimal;
+
+@Data
+public class ChangeBalanceDto {
+
+    private BigDecimal amount;
+
+    private Long version;
+}
